libstdc++-v3/config/cpu/arm/cxxabi_tweaks.h
@@ -1,6 +1,6 @@
 // Control various target specific ABI tweaks.  ARM version.
 
-// Copyright (C) 2004 Free Software Foundation, Inc.
+// Copyright (C) 2004, 2006 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -33,6 +33,8 @@
 #ifdef __cplusplus
 namespace __cxxabiv1
 {
+  extern "C" 
+  {
 #endif
 
 #ifdef __ARM_EABI__
@@ -67,7 +69,8 @@ namespace __cxxabiv1
 #endif //!__ARM_EABI__
 
 #ifdef __cplusplus
+  }
 } // namespace __cxxabiv1
 #endif
 
-#endif // __cxxabiv1
+#endif 
